<package format="2">
  <name>ros4rsb</name>
  <description>
    A ROS to RSB bridge
  </description>
  <author>lziegler, prenner, pdressel</author>
  <maintainer email="lziegler@techfak.uni-bielefeld.de">Leon Ziegler</maintainer>
  <license>BSD</license>
  <version>1.0.0</version>

  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>move_base</depend>
  <depend version_gte="1.14.0">move_base_msgs</depend>
  <depend>bullet</depend>
  <depend>p2os_driver</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>waving_detection</depend>
  <depend>move_base</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>std_srvs</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>

